fix(login): improve form validation messages and add password visibility toggle feat(admin): update layout import path for Menu component style(login): refactor CSS class names for consistency and enhance styling feat(component1): add introductory text and style to Component1

--- a/quark-website/app/login/page.css
+++ b/quark-website/app/login/page.css
@@ -1,4 +1,4 @@
-.Container {
+.container {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -7,7 +7,7 @@
   background-color: #f5f5f5;
 }
 
-.Container form {
+.container form {
   min-width: 40%;
   height: 30%;
   display: flex;
@@ -16,25 +16,98 @@
   justify-content: center;
 }
 
-.Container form div {
+.container form div {
   width: 90%;
-  height: 30%;
+  margin-bottom: 10px;
 }
 
-.Container input {
+.container input {
   width: 100%;
-  height: 60%;
+  height: 40px;
   padding: 0 10px;
   border: 1px solid #ced4da;
   border-radius: 5px;
 }
 
-.Container button {
+.container button {
   width: 40%;
-  height: 20%;
+  height: 40px;
   border: none;
   border-radius: 5px;
   background-color: #007bff;
   color: white;
   font-weight: bold;
+  margin-top: 15px;
+}
+
+.container form div.errorDiv {
+  color: red;
+  font-size: 12px;
+  margin-top: 5px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.container form div.errorDiv ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.container form div.errorDiv li {
+  margin: 0;
+}
+
+.container input.error {
+  border-color: red;
+}
+
+h1 {
+  font-family: sans-serif;
+}
+
+.messagePopUp {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 1000;
+  background-color: rgb(236, 236, 236);
+  padding: 20px;
+  height: 15vh;
+  width: 25vw;
+  border-radius: 10px;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
+  text-align: center;
+}
+
+.closeBtnContainer {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.closeBtn {
+  background: none;
+  border: none;
+  color: #000;
+  font-size: 33px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.closeBtn:hover {
+  color: #d9534f;
+  transition: 200ms;
+}
+
+.messageContainer {
+  margin-top: 10px;
+}
+
+.message {
+  font-size: 16px;
+  color: #333;
+  font-family: Arial, sans-serif;
+  line-height: 1.5;
 }
