--- a/quark-website/components/howUse-page/components/component1/styles.module.css
+++ b/quark-website/components/howUse-page/components/component1/styles.module.css
@@ -1,1 +1,7 @@
- 
+#container {
+  background-color: #5660be;
+  min-height: 80vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
